--- a/src/app/component/search/search.scss
+++ b/src/app/component/search/search.scss
@@ -1,19 +1,17 @@
-#input {
-  /* height: 100%; */
-  border: none;
-  /* background-color: #383838; */
-  color: white;
-  font-size: 16px;
-  padding: 10px;
-  margin: 0;
-  /* border-radius: 30px 0 0 30px; */
-  outline: none;
-  /* width: 60%; */
-  display: hidden;
+.input {
+  // /* height: 100%; */
+  // border: none;
+  // /* background-color: #383838; */
+  // color: white;
+  // font-size: 16px;
+  // padding: 10px;
+  // margin: 0;
+  // /* border-radius: 30px 0 0 30px; */
+  // outline: none;
+  // /* width: 60%; */
+  // display: hidden;
 }
 .tools {
-  position: fixed;
-  right: 1%;
 }
 .search-icon {
   /* border-radius: 0 30px 30px 0; */
